[package]
name = "alex_rust"
version = "0.1.0"
authors = ["Paul Metcalfe <paul.metcalfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.12.0"}
futures = { version = "0.3.15" }
thiserror = { version = "1.0.20" }
